--- a/metadata-browser-pages/src/main/webapp/style/style.css
+++ b/metadata-browser-pages/src/main/webapp/style/style.css
@@ -129,7 +129,7 @@ div#nodePresentationContainer a {
 
 div#nodePresentation{
     height:100%;
-    overflow: scroll;
+    overflow: auto;
     overflow-x: hidden;
 }
 
